--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
     "netlify-cms-app": "^2.15.72",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.0-beta.1",
+    "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
