--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,5 +14,4 @@ collections:
     slug: "{{ slug }}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Copy", name: "copy", widget: "string" }
-      - { label: "Image", name: "img", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
